--- a/travel/travelplan/templates/travel_app/main_post.html
+++ b/travel/travelplan/templates/travel_app/main_post.html
@@ -25,7 +25,7 @@
           {% endif %}
             <div class="flex-box">
               <div class="user-info">
-                <h6>{{ post.author.nickname }}</h6>
+                <h6>작성자 : {{ post.author.nickname }}</h6>
               </div>
             {% if post.author.id == user.id %}
                 <div class="btn-box">
